SHUBHAM_Virtual_Pet_2

--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
     </head>
     <body>
       <script src="sketch.js"></script>
+      <script src="js/Food.js"></script>
     </body>
   </html>
